# syntax-diagrams

./: .buildinfo  .cl-keeper.yaml  .coveragerc.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  advanced.html  conftest.py  describe.html  genindex.html  hyperlinks.html  index.html  objects.inv  pyproject.toml  pytest.toml  quickstart.html  render.html  search.html  searchindex.js  tox.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
_sources/: advanced.rst.txt  describe.rst.txt  hyperlinks.rst.txt  index.rst.txt  render.rst.txt
_static/: documentation_options.js  syntax-diagrams-latex.css  syntax-diagrams.css
docs/: Makefile
docs/source/: advanced.rst  conf.py  describe.rst  index.rst  quickstart.rst
docs/source/_static/: syntax-diagrams-ext.css
docs/try/: .prettierrc  backend.py  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs/try/src/: index.css  main.tsx  monaco.ts  pyodideApi.ts  pyodideApiTypes.ts  pyodideWorker.ts  vite-env.d.ts
docs/try/src/components/: App.css  App.module.css  App.tsx  Debug.module.css  Debug.tsx  Diagram.css  Diagram.module.css  Diagram.tsx  DiagramSettings.css  DiagramSettings.module.css  DiagramSettings.tsx  Editor.tsx
neat_railroad_diagrams/: __init__.py
syntax_diagrams/: __init__.py  element.py  measure.py  render.py  resolver.py
syntax_diagrams/_impl/: __init__.py  load.py  ridge_line.py  vec.py
syntax_diagrams/_impl/render/: __init__.py  svg.py  text.py
syntax_diagrams/_impl/tree/: __init__.py  barrier.py  choice.py  end.py  group.py  node.py  one_or_more.py  sequence.py  skip.py
test/: conftest.py  debug_viewer.py  test_basics.py  test_layout.py  test_render.py  test_ridge_line.py  test_svg_render.py  test_text_render.py
test/image_diff_reference/test.test_render/: test_render_choice-1-ltr-txt_--reference.txt  test_render_choice-3-default-1-ltr-txt_--reference.txt  test_render_choice-3-default-1-rtl-txt_--reference.txt  test_render_choice-3-default-2-ltr-txt_--reference.txt  test_render_choice-3-default-2-rtl-txt_--reference.txt  test_render_choice-3-ltr-txt_--reference.txt  test_render_choice-3-rtl-txt_--reference.txt  test_render_choice-empty-ltr-txt_--reference.txt  test_render_choice-several-skips-default-ltr-txt_--reference.txt  test_render_choice-several-skips-default-rtl-txt_--reference.txt  test_render_choice-several-skips-ltr-txt_--reference.txt  test_render_choice-several-skips-rtl-txt_--reference.txt  test_render_choice-tucking-ltr-txt_--reference.txt  test_render_choice-tucking-rtl-txt_--reference.txt  test_render_choice-up-down-0-ltr-txt_--reference.txt  test_render_choice-up-down-0-rtl-txt_--reference.txt  test_render_choice-up-down-1-ltr-txt_--reference.txt  test_render_choice-up-down-1-rtl-txt_--reference.txt  test_render_choice-up-down-2-ltr-txt_--reference.txt  test_render_choice-up-down-2-rtl-txt_--reference.txt  test_render_choice-up-down-complex-ltr-txt_--reference.txt  test_render_choice-up-down-complex-rtl-txt_--reference.txt  test_render_comment-ltr-txt_--reference.txt  test_render_comment-rtl-txt_--reference.txt  test_render_complex-ltr-txt_--reference.txt  test_render_complex-rtl-txt_--reference.txt  test_render_group-long-title-ltr-txt_--reference.txt  test_render_group-long-title-rtl-txt_--reference.txt  test_render_group-multiline-title-ltr-txt_--reference.txt  test_render_group-multiline-title-rtl-txt_--reference.txt  test_render_group-no-title-ltr-txt_--reference.txt  test_render_group-no-title-rtl-txt_--reference.txt  test_render_group-title-ltr-txt_--reference.txt  test_render_group-title-rtl-txt_--reference.txt  test_render_no_break-long-ltr-txt_--reference.txt  test_render_no_break-long-rtl-txt_--reference.txt  test_render_non_terminal-ltr-txt_--reference.txt  test_render_non_terminal-rtl-txt_--reference.txt  test_render_one_or_more-1-ltr-txt_--reference.txt  test_render_one_or_more-1-repeat-ltr-txt_--reference.txt  (+79 more)
try/: index.html
try/assets/: cssMode-B8V5J-KY.js  cssMode-BaE45W3S.js  cssMode-BlhdAZ05.js  cssMode-CO9naqhq.js  cssMode-DCyTCKgZ.js  cssMode-DDuIaAkH.js  cssMode-DgRrz-8r.js  cssMode-Du-9zSiK.js  cssMode-Zze0Jc2H.js  cssMode-a-GSiVPl.js  cssMode-f56NYQ-1.js  cssMode-pSPVKUxt.js  editor.worker-DrpeXjp6.js  freemarker2-BMZ9zgBG.js  freemarker2-BUD21Ebt.js  freemarker2-Bx3K5c_v.js  freemarker2-CDKlpXde.js  freemarker2-CrOKvPGP.js  freemarker2-D1CPVhTD.js  freemarker2-D9VVfN-o.js  freemarker2-DOoC7tRL.js  freemarker2-Df8pYjjr.js  freemarker2-Du-OjGYF.js  freemarker2-JGTHKZhS.js  freemarker2-lTBCYVA0.js  handlebars-A3byw-Og.js  handlebars-BHoaJSBF.js  handlebars-BKNUKBMY.js  handlebars-C3PlNPZF.js  handlebars-CEBOvHsr.js  handlebars-CbftzsX6.js  handlebars-Cl-Xa3hZ.js  handlebars-X0xtukH0.js  handlebars-ff6FvXJ8.js  handlebars-jh9Srssv.js  handlebars-k-mmeuxQ.js  handlebars-tTkS0JBW.js  html--PIbgaFD.js  html-BB5ntNyd.js  html-BXnpRmse.js  (+170 more)
try/assets/wheels/: grapheme-0.6.0-py3-none-any.whl  syntax_diagrams-0.0.0b1-py3-none-any.whl  syntax_diagrams-0.0.0b2-py3-none-any.whl  syntax_diagrams-0.0.0b3-py3-none-any.whl  syntax_diagrams-0.1.dev1+g6d07bf402-py3-none-any.whl  syntax_diagrams-0.1.dev1+g9dce124af-py3-none-any.whl  syntax_diagrams-0.1.dev1+ge7f8e94d0-py3-none-any.whl  syntax_diagrams-0.1.dev1+gea666e817-py3-none-any.whl  syntax_diagrams-0.1.dev1+geab8a9942-py3-none-any.whl  syntax_diagrams-0.1.dev1+gf29bc5555-py3-none-any.whl  syntax_diagrams-1.0.0-py3-none-any.whl  syntax_diagrams-1.0.0.post0-py3-none-any.whl  syntax_diagrams-1.0.0b0-py3-none-any.whl
typings/grapheme/: __init__.pyi  api.pyi  finder.pyi  grapheme_property_group.pyi
typings/wcwidth/: __init__.pyi
