[project]
name = "syntax-diagrams"
authors = [{name = "Tamika Nomara", email = "taminomara@gmail.com"}]
description = "A library for generating syntax diagrams"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "grapheme~=0.6",
    "wcwidth~=0.2",
]

[dependency-groups]
dev = [
    "pytest-cov==7.0.0",
    "flask==3.1.2",
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "doc"},
]
test = [
    "pyright==1.1.405",
    "pytest==8.4.2",
    "sybil==9.2.0",
    "reportlab[pycairo]==4.4.4",
    "svglib==1.5.1",
    "pytest-image-diff==0.0.14",
    "PyYAML==6.0.3",
]
lint = [
    "black==25.9.0",
    "isort==6.0.1",
    "pre-commit==4.3.0",
]
doc = [
    "sybil==9.2.0",
    "furo==2025.9.25",
    "sphinx_design==0.6.1",
    "sphinx-syntax>=1.0.0,<2.0",
]

[project.urls]
Documentation = "https://syntax-diagrams.readthedocs.io/en/stable/"
Issues = "https://github.com/taminomara/syntax-diagrams/issues"
Source = "https://github.com/taminomara/syntax-diagrams/"
Changelog = "https://github.com/taminomara/syntax-diagrams/blob/main/CHANGELOG.md"


[build-system]
requires = ["setuptools>=60", "setuptools_scm[toml]>=8", "wheel>=0.40"]

[tool.setuptools.packages.find]
include = ["syntax_diagrams"]

[tool.setuptools_scm]
write_to = "syntax_diagrams/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--strict-markers", "-p no:doctest"]
testpaths = ["test", "syntax_diagrams", "docs"]

[tool.pyright]
include = ["syntax_diagrams"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
pythonPlatform = "All"

# deprecateTypingAliases = true
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedFunction = "none"
# reportPrivateUsage = "none"
reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
# reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnnecessaryIsInstance = "none"
# reportConstantRedefinition = "none"
# reportRedeclaration = "none"
# reportAttributeAccessIssue = "none"

[tool.isort]
profile = "black"
skip_gitignore = true
